--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= movie.title %> </title>
+    <title><%= peliculas.title %> </title>
     <link rel='stylesheet' href='/css/style.css' />
 
 </head>
@@ -11,12 +11,12 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
-    <h1><%= movie.title %> </h1>    
+    <h1><%= peliculas.title %> </h1>    
     <br>
-    <p>RATING: <%= movie.rating %> </p>
-    <p>AWARDS: <%= movie.awards %> </p>
-    <p>LENGTH: <%= movie.length + ' min'%> </p>
-    <p>RELEASE DATE: <%= movie.release_date %> </p>
+    <p>RATING: <%= peliculas.rating %> </p>
+    <p>AWARDS: <%= peliculas.awards %> </p>
+    <p>LENGTH: <%= peliculas.length + ' min'%> </p>
+    <p>RELEASE DATE: <%= peliculas.release_date %> </p>
 
 </body>
 </html>
