--- a/src/views/moviesList.ejs
+++ b/src/views/moviesList.ejs
@@ -15,9 +15,9 @@
     </figure>
     <h1>LISTADO DE PELÍCULAS</h1>
     <ul>
-        <% for( let i = 0; i < movies.length; i++ ) { %>
+        <% for( let i = 0; i < peliculas.length; i++ ) { %>
         <li>
-            <a href="/movies/detail/<%= movies[i].id %>"><%= movies[i].title %></a>
+            <a href="/movies/detail/<%= peliculas[i].id %>"><%= peliculas[i].title %></a>
         </li>
         <% } %>
 
