--- a/src/views/newestMovies.ejs
+++ b/src/views/newestMovies.ejs
@@ -10,12 +10,12 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
-    <h1>PELIÍCULAS ORDENADASR FECHA</h1>
+    <h1>PELIÍCULAS ORDENADAS POR FECHA</h1>
     <ul>
-        <% for( let i = 0; i < movies.length; i++ ) { %>
+        <% for( let i = 0; i < peliculas.length; i++ ) { %>
         <li>
-            <a href="/movies/detail/<%=movies[i].id%>"><%= movies[i].title %> </a> <br>
-            <%= 'RELEASE DATE: ' + movies[i].release_date %> 
+            <a href="/movies/detail/<%=peliculas[i].id%>"><%= peliculas[i].title %> </a> <br>
+            <%= 'RELEASE DATE: ' + peliculas[i].release_date %> 
         </li>
         <% } %>
         
