--- a/src/views/genresList.ejs
+++ b/src/views/genresList.ejs
@@ -15,9 +15,9 @@
       </figure>
     <h1>LISTADO DE GENEROS</h1>
     <ul>
-        <% for( let i = 0; i < genres.length; i++ ) { %>
+        <% for( let i = 0; i < generos.length; i++ ) { %>
         <li>
-            <a href="/genres/detail/<%= genres[i].id %>"><%= genres[i].name %></a>
+            <a href="/genres/detail/<%= generos[i].id %>"><%= generos[i].name %></a>
         </li>
         <% } %>
 
