--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,4 +11,10 @@
     <h1><%= title %></h1>
     <p>Bienvenidos a <%= title %></p>
   </body>
+  <a href="/movies">Todas las películas</a> <br>
+  <a href="/movies/new">Estrenos</a> <br>
+  <a href="/movies/recommended">Mejores películas</a> <br>
+  <br>
+  <a href="/genres">Listado de Géneros</a>
+   
 </html>
